# sentrystr

./: .gitignore  Cargo.toml  LICENSE  README.md
sentrystr/: Cargo.toml  README.md
sentrystr-api/: Cargo.toml  README.md
sentrystr-api/src/: api.rs  handlers.rs  lib.rs  main.rs  models.rs
sentrystr-collector/: Cargo.toml  README.md
sentrystr-collector/src/: collector.rs  error.rs  filter.rs  lib.rs  main.rs
sentrystr-python/: Cargo.toml  Makefile  README.md  pyproject.toml
sentrystr-python/python/sentrystr/: __init__.py  handler.py
sentrystr-python/src/: client.rs  config.rs  error.rs  event.rs  lib.rs
sentrystr-python/tests/: debug_events.py  key_generator.py  npub_converter.py  test_advanced_combined.py  test_combined_example.py  test_comprehensive.py  test_config.py  test_direct_messaging.py  test_dynamic_keys.py  test_real_events.py  test_rust_combined_equivalent.py  test_send_dm_method.py  test_send_to_npub.py  test_simple_dm.py  test_visible_events.py
sentrystr-tracing/: Cargo.toml  README.md
sentrystr-tracing/examples/: basic_usage.rs  custom_fields.rs  integration_test.rs  with_direct_messages.rs
sentrystr-tracing/src/: builder.rs  error.rs  layer.rs  lib.rs  visitor.rs
sentrystr/src/: client.rs  combined_example.rs  lib.rs
