[package]
name = "sentrystr-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "REST API for serving SentryStr events from Nostr network"

[[bin]]
name = "sentrystr-api"
path = "src/main.rs"

[dependencies]
sentrystr-collector = { version = "0.1.0", path = "../sentrystr-collector" }
sentrystr = { version = "0.1.0", path = "../sentrystr" }
nostr = { workspace = true }
axum = "0.7"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { workspace = true }
uuid = { workspace = true }
clap = { version = "4.0", features = ["derive"] }