[package]
name = "sentrystr-collector"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Collector service for retrieving Sentry-like events from Nostr network"
readme = "README.md"

[[bin]]
name = "sentrystr-collector"
path = "src/main.rs"

[dependencies]
sentrystr = { version = "0.1.1", path = "../sentrystr" }
nostr-sdk = { workspace = true }
nostr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }