[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "sentrystr"
authors = [{name = "SentryStr Contributors"}]
description = "Python bindings for SentryStr - a decentralized error tracking system using Nostr"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = []
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sentrystr/sentrystr"
Repository = "https://github.com/sentrystr/sentrystr"
Issues = "https://github.com/sentrystr/sentrystr/issues"

[tool.maturin]
python-source = "python"
module-name = "sentrystr._sentrystr"